--- a/example.html
+++ b/example.html
@@ -9,16 +9,16 @@
 	</head>
 	
 	<body>
-		<div class="mainBody">
+		<div class="cajon">
 
-			<a href="https://www.youtube.com"><div class="element"><p>YOUTUBE</p></div></a>
-			<a href="https://www.reddit.com/"><div class="element"><p>REDDIT</p></div></a>
+			<a href="https://www.youtube.com"><div><p>YOUTUBE</p></div></a>
+			<a href="https://www.reddit.com/"><div><p>REDDIT</p></div></a>
 
 		</div>
 		<div class="raya"></div>
-		<div class="mainBody">
+		<div class="cajon peque">
 
-			<a href="https://www.twitch.tv/"><div class="element peque"><p>TWITCH</p></div></a>
+			<a href="https://www.twitch.tv/"><div><p>TWITCH</p></div></a>
 
 		</div>
 
