--- a/example.html
+++ b/example.html
@@ -10,13 +10,15 @@
 	
 	<body>
 		<div class="cajon">
-
+			<div class="nombre"><p>esto es un cajon grande</p></div>
+			
 			<a href="https://www.youtube.com"><div><p>YOUTUBE</p></div></a>
 			<a href="https://www.reddit.com/"><div><p>REDDIT</p></div></a>
 
 		</div>
 		<div class="raya"></div>
 		<div class="cajon peque">
+			<div class="nombre"><p>esto es un cajon peque</p></div>
 
 			<a href="https://www.twitch.tv/"><div><p>TWITCH</p></div></a>
 
